# dxf2jeo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
conan/recipes/: .gitignore
conan/recipes/libdxfrw/all/: conandata.yml  conanfile.py
conan/recipes/libdxfrw/all/patches/: 0001-fix-write-external-data-in-entities.patch  0002-fix-gcc-compilation.patch  0003-fix-write-external-data-at-the-end-of-entity.patch
src/: ArcUtils.cpp  ArcUtils.h  Dxf2Jeo.cpp  Dxf2Jeo.h  Dxf2JeoExe.cpp  Dxf2JeoVersion.h.in  DxfColors.cpp  DxfColors.h  DxfModel.h  DxfReader.cpp  DxfReader.h  DxfUtils.cpp  DxfUtils.h  DxfWriter.cpp  DxfWriter.h  Jeo2Dxf.cpp  Jeo2Dxf.h  Jeo2DxfExe.cpp  JeoModel.h  JeoReader.cpp  JeoReader.h  JeoWriter.cpp  JeoWriter.h
test/: Dxf2JeoTests.cpp
test/asset/: test1.jeo  test2.jeo  test3.dxf  test4.dxf
